--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,4 +1,4 @@
-version: 0.1
+version: 0.2
 
 phases:
 
@@ -19,24 +19,23 @@ phases:
       # Ensure code passes all lint tests
       - golint -set_exit_status
 
-      - - cd "${GOPATH}/src/github.com/awslabs/aws-sam-cli"
-
       # Run all tests included with our application
-      - cd "${GOPATH}/src/github.com/awslabs/aws-sam-cli" && find .
-      - cd "${GOPATH}/src/github.com/awslabs/aws-sam-cli" && go test .
+      - cd "${GOPATH}/src/github.com/awslabs/aws-sam-cli"
       - go test .
 
   build:
     commands:
 
-      # Build our application
+      # Create output directories
       - mkdir -p "${CODEBUILD_SRC_DIR}/windows"
       - mkdir -p "${CODEBUILD_SRC_DIR}/linux"
       - mkdir -p "${CODEBUILD_SRC_DIR}/osx"  
-      - cd "${GOPATH}/src/github.com/awslabs/aws-sam-cli" && find .
-      - cd "${GOPATH}/src/github.com/awslabs/aws-sam-cli" && GOOS=linux go build -o "${CODEBUILD_SRC_DIR}/linux/sam"
-      - cd "${GOPATH}/src/github.com/awslabs/aws-sam-cli" && GOOS=darwin go build -o "${CODEBUILD_SRC_DIR}/osx/sam"
-      - cd "${GOPATH}/src/github.com/awslabs/aws-sam-cli" && GOOS=windows go build -o "${CODEBUILD_SRC_DIR}/windows/sam.exe"
+      
+      # Build AWS SAM CLI
+      - cd "${GOPATH}/src/github.com/awslabs/aws-sam-cli"
+      - GOOS=linux go build -o "${CODEBUILD_SRC_DIR}/linux/sam"
+      - GOOS=darwin go build -o "${CODEBUILD_SRC_DIR}/osx/sam"
+      - GOOS=windows go build -o "${CODEBUILD_SRC_DIR}/windows/sam.exe"
 
       # Create a VERSION file with details on the git hash etc
       - echo "Git commit ${CODEBUILD_RESOLVED_SOURCE_VERSION}" > "${CODEBUILD_SRC_DIR}/VERSION"
