--- a/buildspec.yml
+++ b/buildspec.yml
@@ -43,6 +43,20 @@ phases:
       - echo "Git commit ${CODEBUILD_RESOLVED_SOURCE_VERSION}" > "${CODEBUILD_SRC_DIR}/VERSION"
       - echo "Built by AWS CodeBuild $(date)" >> "${CODEBUILD_SRC_DIR}/VERSION"
 
+  post_build:
+
+      # Release the binaries to the public S3 bucket
+      - aws s3 "${CODEBUILD_SRC_DIR}/linux/sam" s3://aws-sam-cli/releases/${CODEBUILD_RESOLVED_SOURCE_VERSION}/linux/sam
+      - aws s3 "${CODEBUILD_SRC_DIR}/osx/sam" s3://aws-sam-cli/releases/${CODEBUILD_RESOLVED_SOURCE_VERSION}/osx/sam
+      - aws s3 "${CODEBUILD_SRC_DIR}/windows/sam.exe" s3://aws-sam-cli/releases/${CODEBUILD_RESOLVED_SOURCE_VERSION}/windows/sam.exe
+      - aws s3 "${CODEBUILD_SRC_DIR}/VERSION" s3://aws-sam-cli/releases/${CODEBUILD_RESOLVED_SOURCE_VERSION}/VERSION
+
+      # Repoint the latest/ directory to this build
+      - aws s3 cp s3://aws-sam-cli/releases/${CODEBUILD_RESOLVED_SOURCE_VERSION}/linux/sam s3://aws-sam-cli/releases/latest/linux/sam
+      - aws s3 cp s3://aws-sam-cli/releases/${CODEBUILD_RESOLVED_SOURCE_VERSION}/osx/sam s3://aws-sam-cli/releases/latest/osx/sam
+      - aws s3 cp s3://aws-sam-cli/releases/${CODEBUILD_RESOLVED_SOURCE_VERSION}/windows/sam.exe s3://aws-sam-cli/releases/latest/windows/sam.exe
+      - aws s3 cp s3://aws-sam-cli/releases/${CODEBUILD_RESOLVED_SOURCE_VERSION}/VERSION s3://aws-sam-cli/releases/latest/VERSION
+
 artifacts:
   files:
     - VERSION
