--- a/buildspec.yml
+++ b/buildspec.yml
@@ -44,7 +44,8 @@ phases:
       - echo "Built by AWS CodeBuild $(date)" >> "${CODEBUILD_SRC_DIR}/VERSION"
 
   post_build:
-
+    commands:
+    
       # Release the binaries to the public S3 bucket
       - aws s3 "${CODEBUILD_SRC_DIR}/linux/sam" s3://aws-sam-cli/releases/${CODEBUILD_RESOLVED_SOURCE_VERSION}/linux/sam
       - aws s3 "${CODEBUILD_SRC_DIR}/osx/sam" s3://aws-sam-cli/releases/${CODEBUILD_RESOLVED_SOURCE_VERSION}/osx/sam
