Fixed typo in package description

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -52,7 +52,7 @@ fpm:
   vendor: Amazon Web Services
   homepage: https://github.com/awslabs/aws-sam-local
   maintainer: aws-sam-cli@amazon.com
-  description: AWS SAM Local CLI is a handy CLI tool for developing, testing and deploying Servferless applications.
+  description: AWS SAM Local is a CLI tool for developing, testing and deploying Serverless applications.
   license: Apache 2.0
   formats:
     - deb
