--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -24,7 +24,7 @@ archive:
 release:
     github:
         owner: awslabs
-        name: aws-sam-cli
+        name: aws-sam-local
  
     # Don't auto-publish the release. Admin has to manually publish at right time
     # Setting to true will also prevent brew from being published
@@ -34,19 +34,19 @@ release:
 #brew:
 # 
 #    # repository to push the tap to.
-#    folder: formula
+#    folder: Formula
 #    github:
 #        owner: awslabs
-#        name: aws-sam-cli
+#        name: homebrew-tap
 # 
-#    homepage: "https://github.com/awslabs/aws-sam-cli"
-#    description: "develop and test your serverless applications locally without uploading to aws lambda" 
+#    homepage: "https://github.com/awslabs/aws-sam-local"
+#    description: "Develop and test your serverless applications locally without uploading to AWS Lambda"
 #    test: |
 #        output = shell_output(bin/"sam --version")
 #        assert_match "sam version #{version}", output
 # 
 #    install: |
-#        bin.install "aws-sam-cli"
+#        bin.install "aws-sam-local"
 
 fpm: 
   vendor: Amazon Web Services
