Comment out NPM release

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -11,8 +11,8 @@ builds:
       - amd64
       - 386
 
-    hooks:
-      post: ./distribution/npm/npm-release.sh
+    #hooks:
+    #  post: ./distribution/npm/npm-release.sh
  
 archive:
   format: tar.gz
