Simplified (somewhat) the container working directory handling, as previously I found some edge cases that caused issues with the static directory that was mounted

--- a/samples/java/template.yml
+++ b/samples/java/template.yml
@@ -22,7 +22,7 @@ Resources:
         GetEvent:
           Type: Api
           Properties:
-            Path: /
+            Path: /java
             Method: get
 
   PostHelloWorld:
