Updated READMEs to reflect changes to generate-event functionality

--- a/sample-events/event-mapping.json
+++ b/sample-events/event-mapping.json
@@ -87,7 +87,7 @@
           "value": "/{proxy+}"
         },
         {
-          "name": "path, [",
+          "name": "path, p",
           "usage": "HTTP path",
           "value": "/examplepath"
         }
