changed event names to match operation

--- a/samples/api-event-source/python/template.yaml
+++ b/samples/api-event-source/python/template.yaml
@@ -11,7 +11,7 @@ Resources:
       Runtime: python3.6
       Handler: api.get
       Events:
-        ListCustomers:
+        GetItems:
           Type: Api
           Properties:
             Path: /
@@ -22,7 +22,7 @@ Resources:
       Runtime: python3.6
       Handler: api.put
       Events:
-        ListCustomers:
+        PutItems:
           Type: Api
           Properties:
             Path: /
