feat(Python3): Build support for Python3.6 (#478)

--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,9 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27
+envlist = py27, py36
 
 [testenv]
 whitelist_externals = make
-commands = make pr
+commands =
+    make pr
