--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,16 @@
 sudo: false
 language: python
 
+python:
+  - "2.7"
+  - "3.6"
+
 install:
-# Install the code requirements
-- make init
+  # Install the code requirements
+  - make init
 
 # Install Docs requirements
 
 script:
-# Runs unit tests
-- make pr
+  # Runs unit tests
+  - make pr
