--- a/tests/integration/testdata/start_api/template.yaml
+++ b/tests/integration/testdata/start_api/template.yaml
@@ -59,6 +59,19 @@ Resources:
             Method: POST
             Path: /echoeventbody
 
+  EchoEventFunction2:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: main.echo_event_handler_2
+      Runtime: python3.6
+      CodeUri: .
+      Events:
+        EchoEventBodyPath:
+          Type: Api
+          Properties:
+            Method: GET
+            Path: /echoeventbody
+
   ContentTypeSetterFunction:
     Type: AWS::Serverless::Function
     Properties:
