fix: change codecommit event name to repository

--- a/samcli/commands/local/lib/generated_sample_events/event-mapping.json
+++ b/samcli/commands/local/lib/generated_sample_events/event-mapping.json
@@ -356,9 +356,9 @@
     }
   },
   "codecommit": {
-    "codecommit": {
+    "repository": {
       "filename": "CodeCommit",
-      "help": "Generates an AWS CodeCommit Event",
+      "help": "Generates an AWS CodeCommit Repository Event ",
       "tags": {
         "account-id": {
           "default": "123456789012"
