fix: change kinesis event name to get-records and description

--- a/samcli/commands/local/lib/generated_sample_events/event-mapping.json
+++ b/samcli/commands/local/lib/generated_sample_events/event-mapping.json
@@ -494,9 +494,9 @@
     }
   },
   "kinesis": {
-    "kinesis": {
+    "get-records": {
       "filename": "Kinesis",
-      "help": "Generates an Amazon Kinesis Event",
+      "help": "Generates an Amazon Kinesis Data Stream Event",
       "tags": {
         "region": {
           "default": "us-east-1"
