fix: address jacob's feedback on single notification

--- a/samcli/commands/local/lib/generated_sample_events/event-mapping.json
+++ b/samcli/commands/local/lib/generated_sample_events/event-mapping.json
@@ -691,9 +691,9 @@
     }
   },
   "sns": {
-    "notifications": {
+    "notification": {
       "filename": "Sns",
-      "help": "Generates an Amazon SNS Topic Notifications Event",
+      "help": "Generates an Amazon SNS Topic Notification Event",
       "tags": {
         "account-id": {
           "default": "123456789012"
